--- a/docker-compose.yml.dist
+++ b/docker-compose.yml.dist
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: ${REGISTRY_URL}/celerbuild-example-php:${IMAGE_TAG}
+    image: your-registry.com/celerbuild-example-php:${IMAGE_TAG}
     container_name: celerbuild-example-php
     restart: unless-stopped
     ports:
