chore: Add options to exclude MacOS-specific metadata and extended attributes.

--- a/project-template/celerbuild-example-php-dev.yaml
+++ b/project-template/celerbuild-example-php-dev.yaml
@@ -16,7 +16,7 @@ buildCmds: |-
   php bin/console cache:clear --env=dev
   php bin/console cache:warmup --env=dev
 
-  tar -zcvf ${LOCAL_PACKAGE_FILE} .env.dist *
+  tar --no-xattrs --no-mac-metadata -zcvf ${LOCAL_PACKAGE_FILE} .env.dist *
 preDeploymentCmds: ''
 postDeploymentCmds: |-
   #!/bin/bash
