--- a/project-template/celerbuild-example-php-dev.yaml
+++ b/project-template/celerbuild-example-php-dev.yaml
@@ -1,6 +1,5 @@
 name: celerbuild-example-php-dev
 env: dev
-space: default
 repoPath: git@github.com:celerbuild/celerbuild-example-php.git
 targetDeployPath: /home/ubuntu/apps/php
 targetDeployWarehousePath: /home/ubuntu/repos/php
@@ -8,15 +7,7 @@ targetWarehouseVersionKeep: 3
 serverClusterID: 33
 deployMode: branch
 deployUser: ubuntu
-buildCmds: |-
-  # Install all dependencies including dev dependencies
-  composer install
-
-  # Clear and warm up the cache for the dev environment
-  php bin/console cache:clear --env=dev
-  php bin/console cache:warmup --env=dev
-
-  tar --no-xattrs --no-mac-metadata -zcvf ${LOCAL_PACKAGE_FILE} .env.dist *
+buildCmds: tar --no-xattrs --no-mac-metadata -zcvf ${LOCAL_PACKAGE_FILE} .env.dist *
 preDeploymentCmds: ''
 postDeploymentCmds: |-
   #!/bin/bash
@@ -41,12 +32,19 @@ postDeploymentCmds: |-
   cp -r "$SOURCE_DIR"/. "$DEST_DIR"
   echo "Files copied from $SOURCE_DIR to $DEST_DIR."
 
-
   # Check if .env file exists, if not, create it from .env.dist
   if [ ! -f "$DEST_DIR/.env" ]; then
       cp "$DEST_DIR/.env.dist" "$DEST_DIR/.env"
       echo ".env file created from .env.dist."
   fi
+
+  # Change to project directory and install dependencies
+  cd "$DEST_DIR"
+  composer install
+
+  # Clear and warm up the cache for the dev environment
+  php bin/console cache:clear --env=dev
+  php bin/console cache:warmup --env=dev
 
   # Set permissions for the .env file
   sudo chown www-data:www-data "$DEST_DIR/.env"
