--- a/project-template/celerbuild-example-php-prod.yaml
+++ b/project-template/celerbuild-example-php-prod.yaml
@@ -13,8 +13,9 @@ postDeploymentCmds: |-
   #!/bin/bash
 
   # Define project directories
+  DEPLOY_USER="${DEPLOY_USER}"  # Deployment user (e.g., ubuntu, ec2-user, etc.)
   SOURCE_DIR="${TARGET_DEPLOYMENT_PATH}/${TARGET_DEPLOYMENT_PROJECT_NAME}"
-  DEST_DIR="/home/ubuntu/celerbuild-example-php"
+  DEST_DIR="/home/${DEPLOY_USER}/celerbuild-example-php"
 
   # Check if the destination directory exists
   if [ ! -d "$DEST_DIR" ]; then
@@ -25,7 +26,7 @@ postDeploymentCmds: |-
   fi
 
   # Temporarily set permissions for the destination directory
-  sudo chown -R ubuntu:ubuntu "$DEST_DIR"
+  sudo chown -R ${DEPLOY_USER}:${DEPLOY_USER} "$DEST_DIR"
   sudo chmod -R 755 "$DEST_DIR"
 
   # Copy contents to the destination directory
@@ -39,15 +40,6 @@ postDeploymentCmds: |-
       echo ".env file created from .env.dist."
   fi
 
-  cd "$DEST_DIR"
-
-  # Install only production dependencies
-  composer install --no-dev --optimize-autoloader
-
-  # Clear and warm up the cache for the prod environment
-  php bin/console cache:clear --env=prod
-  php bin/console cache:warmup --env=prod
-
   # Set permissions for the .env file
   sudo chown www-data:www-data "$DEST_DIR/.env"
   sudo chmod 644 "$DEST_DIR/.env"
@@ -55,6 +47,13 @@ postDeploymentCmds: |-
   # Set final permissions for the destination directory
   sudo chown -R www-data:www-data "$DEST_DIR"
   sudo chmod -R 755 "$DEST_DIR"
+
+  # Install only production dependencies
+  composer install --no-dev --optimize-autoloader
+
+  # Clear and warm up the cache for the prod environment
+  php bin/console cache:clear --env=prod
+  php bin/console cache:warmup --env=prod
 
   # Restart Nginx and PHP-FPM
   sudo systemctl restart nginx
